# MCP-GITHUB-SERVER

./: .env  README.md  config.py  github_client.py  main.py  mcp_server.py  pyproject.toml  requirements.txt
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
mcp_server/: db.sqlite3
mcp_server/github_app/: contexts.py  models.py  serializers.py  urls.py  views.py
mcp_server/github_app/migrations/: 0001_initial.py
mcp_server/mcp_server/: settings.py  urls.py
mcp_server/static/: styles.css
mcp_server/templates/: index.html
src/mcp_github_server/: server.py
