[project]
name = "mcp-github-server"
version = "0.6.0"
description = "Trial"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [ "mcp>=1.4.1",]
[[project.authors]]
name = "Stormbreaker"
email = "aliasgarabbas42@gmail.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
mcp-github-server = "mcp_github_server:main"
